wip: add condition

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,8 +198,9 @@ jobs:
     - name: E2E Tests
       timeout-minutes: 10
       run: npm run test:e2e
+  # TODO: Add publish helm chart and generate docs here
   deploy:
-    #if: ${{ github.event_name != 'pull_request' and github.ref == 'refs/heads/main' }}
+    if: ${{ github.event_name != 'pull_request' and github.ref == 'refs/heads/main' }}
     name: "Deploy to Lab"
     needs: [ test-deploy ]
     runs-on: ubuntu-latest
