--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "Collects and receives data which is ingested to a processing pipeline which normalizes to prep for watch evaluations, watches trigger alerts",
   "main": "build/monoApp.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "build": "node_modules/typescript/bin/tsc --project ./",
     "start": "node build/src/monoApp.js",
     "start:dev": "nodemon",
     "start:services": "docker-compose -f docker-compose.yml up -d",
     "stop:services": "docker-compose -f docker-compose.yml down",
     "lint": "eslint --ext .ts src/",
-    "lint:fix": "eslint --ext .ts src/ --fix"
+    "lint:fix": "eslint --ext .ts src/ --fix",
+    "kind:create": "kind create cluster --name hermes --config kind-config.yaml",
+    "kind:delete": "kind delete cluster --name hermes",
+    "helm:deploy": "helm upgrade --install --namespace $npm_config_helm_namespace $npm_config_helm_args hermes ./helm/hermes --debug --wait",
+    "helm:test": "helm test hermes",
+    "helm:delete": "helm delete hermes",
+    "helm:lint": "helm lint ./helm/hermes",
+    "test:e2e": "echo 'todo'"
   },
   "repository": {
     "type": "git",
@@ -37,6 +44,7 @@
   },
   "devDependencies": {
     "@types/bull": "^3.15.6",
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
@@ -46,7 +54,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "fastify": "^3.24.0",
+    "jest": "^27.4.5",
     "nodemon": "^2.0.15",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
