wip: fix source copy, remove signing for now

--- a/helm/hermes/values.yaml
+++ b/helm/hermes/values.yaml
@@ -1,9 +1,10 @@
 replicaCount: 1
 image:
-  repository: nginx
+  repository: ghcr.io/bryopsida/hermes-mono
   pullPolicy: IfNotPresent
-  tag: ""
-imagePullSecrets: []
+  tag: "latest"
+imagePullSecrets: 
+  - name: ghcr-credentials
 nameOverride: ""
 fullnameOverride: ""
 serviceAccount:
@@ -35,3 +36,38 @@ autoscaling:
 nodeSelector: {}
 tolerations: []
 affinity: {}
+elastic:
+  enabled: true
+kafka:
+  enabled: true
+  replicaCount: 5
+  defaultReplicationFactor: 3
+  offsetsTopicReplicationFactor: 3
+  transactionStateLogReplicationFactor: 3
+  nodeSelector:
+    kubernetes.io/arch: amd64
+  zookeeper:
+    replicaCount: 3
+    nodeSelector:
+      kubernetes.io/arch: amd64
+redis:
+  enabled: true
+  existingSecret: "hermes-internal-redis"
+  existingSecretPasswordKey: "redisPassword"
+  updateJob:
+    nodeSelector:
+      kubernetes.io/arch: amd64
+  redis:
+    nodeSelector:
+      kubernetes.io/arch: amd64
+postgres:
+  enabled: true
+  postgresql:
+    replicaCount: 2
+    existingSecret: "hermes-internal-postgresql"
+    nodeSelector:
+      kubernetes.io/arch: amd64
+  pgpool:
+    existingSecret: "hermes-internal-pgpool"
+    nodeSelector:
+      kubernetes.io/arch: amd64
