wip: fix npm helm:deploy

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:fix": "eslint --ext .ts src/ --fix",
     "kind:create": "kind create cluster --name hermes --config kind-config.yaml",
     "kind:delete": "kind delete cluster --name hermes",
-    "helm:deploy": "helm upgrade --install --namespace $npm_config_helm_namespace $npm_config_helm_args hermes ./helm/hermes --debug --wait",
+    "helm:deploy": "helm upgrade --install --namespace $npm_config_helm_namespace hermes ./helm/hermes --debug --wait $npm_config_helm_args",
     "helm:test": "helm test hermes",
     "helm:delete": "helm delete hermes",
     "helm:lint": "helm lint ./helm/hermes",
@@ -36,6 +36,7 @@
     "bull": "^4.1.1",
     "fastify-helmet": "^5.3.2",
     "fastify": "^3.24.0",
+
     "knex": "^0.95.14",
     "librdkafka": "^0.0.0",
     "node-rdkafka": "^2.12.0",
