--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,7 +183,7 @@ jobs:
       run: npm run kind:create
     - name: Deploy
       timeout-minutes: 20
-      run: npm run helm:deploy --helm_namespace=$HELM_NAMESPACE --helm_args="--create-namespace -f helm/hermes/envs/ci.yaml--set image.repository=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} --set image.tag=${{ needs.build-container.outputs.version }} --timeout 15m"
+      run: npm run helm:deploy --helm_namespace=$HELM_NAMESPACE --helm_args="--create-namespace -f helm/hermes/envs/ci.yaml --set image.repository=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} --set image.tag=${{ needs.build-container.outputs.version }} --timeout 15m"
     - name: Test Deployment
       timeout-minutes: 5
       run: npm run helm:test
@@ -264,7 +264,7 @@ jobs:
     - name: Deploy To lab
       timeout-minutes: 25
       run: |
-        npm run helm:deploy --helm_namespace=$HELM_NAMESPACE --helm_args="-f helm/hermes/envs/lab.yaml -set image.repository=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} --set image.tag=${{ needs.build-container.outputs.version }} --timeout 20m"
+        npm run helm:deploy --helm_namespace=$HELM_NAMESPACE --helm_args="-f helm/hermes/envs/lab.yaml --set image.repository=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} --set image.tag=${{ needs.build-container.outputs.version }} --timeout 20m"
     - name: Cleanup Wireguard
       timeout-minutes: 4
       if: always()
