--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,30 @@ env:
   IMAGE_NAME: ${{ github.repository }}-mono
   CLUSTER_NAME: lab
   KUBE_NAMESPACE: hermes
+  CODEQL_ENABLED: true
 jobs:
+  analyze:
+    name: Analyze
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'javascript' ]
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v1
+      with:
+        languages: ${{ matrix.language }}
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v1
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v1
   build-container:
     name: "Build Container"
     runs-on: ubuntu-latest
@@ -161,7 +184,7 @@ jobs:
           sarif_file: kubesec-results.sarif
   test-deploy:
     name: "Test Deploy"
-    needs: [ build-container, helm-lint, kube-scan ]
+    needs: [ build-container, helm-lint, kube-scan, analyze ]
     runs-on: ubuntu-latest
     env: 
       HELM_NAMESPACE: "hermes"
