--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint --ext .ts src/",
     "lint:fix": "eslint --ext .ts src/ --fix",
     "kind:create": "kind create cluster --name hermes --config kind-config.yaml",
-    "kind:load": "kind load image-archive $npm_config_tag",
+    "kind:load": "kind load image-archive $npm_config_image --name hermes",
     "kind:delete": "kind delete cluster --name hermes",
     "k8s:createPullSecret": "kubectl --namespace $npm_config_helm_namespace create secret docker-registry ghcr-credentials  --docker-server=ghcr.io --docker-username=$npm_config_registry_username --docker-password=$npm_config_registry_password",
     "k8s:createNamespace": "kubectl create namespace $npm_config_helm_namespace",
