--- a/.github/workflows/ci-cleanup.yml
+++ b/.github/workflows/ci-cleanup.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   delete-image-artifacts:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     name: "Delete image artifacts"
     steps:
     - name: Delete workflow run image artifacts
