--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -230,7 +230,8 @@ jobs:
     - name: Collect Info On Failure
       if: failure()
       run: npm run kind:logs
-    - uses: actions/upload-artifact@v2
+    - name: Upload Info On Failure
+      uses: actions/upload-artifact@v2
       if: failure()
       with:
         name: test-deploy-logs
