wip: switch from kind to microk8s

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -207,9 +207,17 @@ jobs:
         mkdir -p /tmp/artifacts
         gzip --stdout --decompress /tmp/artifacts/image.tar.gz > /tmp/artifacts/image.tar
         docker load -i /tmp/artifacts/image.tar
-    - name: Create KIND Cluster
-      timeout-minutes: 10
-      run: npm run kind:create
+    - name: Create MicroK8S Cluster
+      timeout-minutes: 15
+      run: |
+        sudo snap install microk8s --classic --channel=1.23/stable
+        sudo microk8s enable dns storage registry rbac
+        sudo microk8s status --wait-ready
+        sudo microk8s kubectl rollout status deployment/hostpath-provisioner -n kube-system
+    - name: Set Kube Config
+      run: sg microk8s -c "microk8s config" > ~/.kube/config
+    - name: Test Kube Access
+      run: kubectl get nodes
     - name: Create Namespace
       run: npm run k8s:createNamespace --helm_namespace=$HELM_NAMESPACE
     - name: Create Pull Secret
@@ -217,10 +225,12 @@ jobs:
       run: npm run k8s:createPullSecret --helm_namespace=$HELM_NAMESPACE --registry_username=${{ github.actor }} --registry_password=${{ github.token }}
     - name: Side Load Image
       if: ${{ github.event_name == 'pull_request' }}
-      run: npm run kind:load --image="/tmp/artifacts/image.tar"
+      run: |
+        docker -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.build-container.outputs.version }} localhost:32000/hermes-mono:latest
+        docker push localhost:32000/hermes-mono:latest
     - name: Deploy
       timeout-minutes: 25
-      run: npm run helm:deploy --helm_namespace=$HELM_NAMESPACE --helm_args="-f helm/hermes/envs/ci.yaml --set image.repository=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} --set image.tag=${{ needs.build-container.outputs.version }} --timeout 20m"
+      run: npm run helm:deploy --helm_namespace=$HELM_NAMESPACE --helm_args="-f helm/hermes/envs/ci.yaml --set image.repository=localhost:32000/hermes-mono --set image.tag=latest --timeout 20m"
     - name: Test Deployment
       timeout-minutes: 5
       run: npm run helm:test
@@ -229,13 +239,17 @@ jobs:
       run: npm run test:e2e
     - name: Collect Info On Failure
       if: failure()
-      run: npm run kind:logs
+      run: |
+        mkdir /tmp/microk8s-hermes/
+        sudo snap logs microk8s > /tmp/microk8s-hermes/microk8s.log
+        inspectTarball=$(sudo microk8s inspect | grep -Po "/var/snap/microk8s/.*\.tar\.gz")
+        sudo cp $inspectTarball /tmp/microk8s-hermes/
     - name: Upload Info On Failure
       uses: actions/upload-artifact@v2
       if: failure()
       with:
         name: test-deploy-logs
-        path: /tmp/kind-hermes/logs/
+        path: /tmp/microk8s-hermes/
         retention-days: 1
   # TODO: Add publish helm chart and generate docs here
   deploy:
