--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "@bull-board/fastify": "^3.8.1",
     "axios": "^0.24.0",
     "bull": "^4.1.1",
-    "fastify-helmet": "^5.3.2",
+    "config": "^3.3.6",
     "fastify": "^3.24.0",
-
+    "fastify-helmet": "^5.3.2",
     "knex": "^0.95.14",
     "librdkafka": "^0.0.0",
     "node-rdkafka": "^2.12.0",
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/bull": "^3.15.6",
+    "@types/config": "^0.0.40",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
