--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "@bull-board/fastify": "^3.8.1",
     "axios": "^0.24.0",
     "bull": "^4.1.1",
-    "fastify-helmet": "^5.3.2",
     "fastify": "^3.24.0",
+    "fastify-helmet": "^5.3.2",
     "librdkafka": "^0.0.0",
+    "mongoose": "^6.1.5",
     "node-rdkafka": "^2.12.0",
     "pino": "^7.4.1",
     "pino-pretty": "^7.2.0"
