--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,13 +16,15 @@ services:
     volumes: 
       - zookeeperdata:/var/lib/zookeeper/data
       - zookeeperlog:/var/lib/zookeeper/log
-  mongo:
+  mongodb:
     image: mongo
     environment:
-      MONGO_INITDB_ROOT_USERNAME: mongo
-      MONGO_INITDB_ROOT_PASSWORD: mongo
+      MONGO_INITDB_ROOT_USERNAME: mongodb
+      MONGO_INITDB_ROOT_PASSWORD: mongodb
+    ports:
+      - 27017:27017
     volumes:
-    - mongo:/mongo/db
+    - mongodb:/mongo/db
   kafka:
     image: confluentinc/cp-kafka:latest
     depends_on:
