--- a/helm/hermes/Chart.yaml
+++ b/helm/hermes/Chart.yaml
@@ -15,3 +15,8 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami
     condition: redis.enabled
     alias: redis
+  - name: mongodb-sharded
+    version: "3.11.0"
+    repository: https://charts.bitnami.com/bitnami
+    condition: mongodb.enabled
+    alias: mongodb
