--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -219,7 +219,7 @@ jobs:
       timeout-minutes: 15
       run: |
         sudo snap install microk8s --classic --channel=1.23/stable
-        sudo microk8s enable dns storage registry rbac
+        sudo microk8s enable dns storage registry rbac ingress
         sudo microk8s status --wait-ready
         sudo microk8s kubectl rollout status deployment/hostpath-provisioner -n kube-system
         sudo microk8s kubectl rollout status deployment/registry -n container-registry
