--- a/helm/hermes/values.yaml
+++ b/helm/hermes/values.yaml
@@ -18,11 +18,11 @@ service:
   type: ClusterIP
   port: 80
 ingress:
-  enabled: false
+  enabled: true
   className: ""
   annotations: {}
   hosts:
-    - host: chart-example.local
+    - host: hermes.local
       paths:
         - path: /
           pathType: ImplementationSpecific
@@ -31,7 +31,7 @@ resources: {}
 autoscaling:
   enabled: false
   minReplicas: 1
-  maxReplicas: 100
+  maxReplicas: 10
   targetCPUUtilizationPercentage: 80
 nodeSelector: {}
 tolerations: []
