--- a/helm/hermes/templates/secrets.yml
+++ b/helm/hermes/templates/secrets.yml
@@ -9,29 +9,17 @@ metadata:
 data:
   redisPassword: {{ randAlphaNum 32 | b64enc | quote }}
 {{- end }}
-
-{{- if not .Values.postgresExistingSecretName }}
+{{- if not .Values.mongoDbExistingSecret }}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Release.Name }}-internal-postgresql
+  name: {{ .Release.Name }}-internal-mongodb
   annotations:
     "helm.sh/hook": pre-install
+type: Opaque
 data:
- repmgr-password: {{ randAlphaNum 32 | b64enc | quote }}
- postgresql-password: {{ randAlphaNum 32 | b64enc | quote }}
-{{- end }}
-
-
-{{- if not .Values.pgpoolExistingSecretName }}
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: {{ .Release.Name }}-internal-pgpool
-  annotations:
-    "helm.sh/hook": pre-install
-data:
- admin-password: {{ randAlphaNum 32 | b64enc | quote }}
+  mongodb-root-password: {{ randAlphaNum 16 | b64enc | quote }}
+  mongodb-password: {{ randAlphaNum 16 | b64enc | quote }}
+  mongodb-replica-set-key: {{ randAlphaNum 16 | b64enc | quote }}
 {{- end }}
