update typescript build to package json files, map production.json to /usr/src/app/config instead of /app/config

--- a/helm/hermes/templates/deployment.yaml
+++ b/helm/hermes/templates/deployment.yaml
@@ -82,7 +82,7 @@ spec:
                 key: "mongodb-password"
           volumeMounts:
             - name: config-volume
-              mountPath: /app/config/
+              mountPath: /usr/src/app/config/
               readOnly: true
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
