--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "removeComments": false,
+        "resolveJsonModule": true,
         "declaration": true,
         "lib": ["es2020"],
         "target": "ES2020",                                /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
@@ -16,7 +17,8 @@
         "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
     },
     "include": [
-        "src"
+        "src",
+        "src/config/*.json"
     ],
     "exclude": [
         "node_modules",
